test/fixtures/diagnostics/type-checker/negative/non-exhaustive-union-match/input.tysh
namespace Samples.TypeChecker.NonExhaustive

union PaymentStatus {
  Pending
  Paid(at: string)
  Failed(reason: string)
}

fun describe(status: PaymentStatus): string =
  match status {
    Pending => "Waiting"
    Paid(at) => at
  }
